--- a/index.html
+++ b/index.html
@@ -122,43 +122,43 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/Balik/" alt="">
+                  <img src="assets/img/blog/balik/1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/2.jpg" alt="">
+                  <img src="assets/img/blog/balik/2.jp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/3.jpg" alt="">
+                  <img src="assets/img/blog/balik/3.jp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/4.jpg" alt="">
+                  <img src="assets/img/blog/balik/4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/5.jpg" alt="">
+                  <img src="assets/img/blog/balik/5.jp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/6.jpg" alt="">
+                  <img src="assets/img/blog/balik/6.jp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/7.jpg" alt="">
+                  <img src="assets/img/blog/balik/7.jp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/8.jpg" alt="">
+                  <img src="assets/img/blog/balik/8.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/9.jpg" alt="">
+                  <img src="assets/img/blog/balik/9.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/alle/10.jpg" alt="">
+                  <img src="assets/img/blog/balik/10.jp" alt="">
                 </div>
 
               </div>
@@ -168,16 +168,16 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3> Allegra Villa Information</h3>
+              <h3> Villa Balik Seminyak Information</h3>
               <ul>
-                <li><strong>Property highlights:</strong> This smoke-free villa features an outdoor pool, a microwave in a common area, and multilingual staff. Free WiFi in public areas and free self parking are also provided. The villa features free WiFi, a rainfall shower, and a kitchen with a refrigerator. Thoughtful touches include bathrobes and slippers, and also available are a coffee/tea maker and an electric kettle.  </li>
+                <li><strong>Property Highlights:</strong> An outdoor pool, express check-out, and a garden are available at this villa. Free WiFi in public areas and free self parking are also provided. The villa boasts a private pool and offers free WiFi and a dining area. For a bit of entertainment, an LCD TV comes with cable channels, and guests can also appreciate conveniences like a sitting area and a refrigerator.  </li>
                 <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning. </li>
                 <li><strong>Explore Area:</strong> </li> 
-                <p> Geger Beach - 19 min walk </p>
-                 <p> Splash Waterpark Bali -  7 min drive </p>
-                 <p> Bali Collection Shopping Centre - 4 min drive </p>
-  <p>Denpasar (DPS-Ngurah Rai Intl.) - 26 min drive </p>
-                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/allegra-villa" target="_blank">Check The Availablity</a></li>
+                <p> Eat Street - 6 min walk </p>
+                 <p> Seminyak Beach - 9 min walk </p>
+                 <p> Seminyak Square - 17 min walk </p>
+  <p>Denpasar (DPS-Ngurah Rai Intl.) - 32 min drive </p>
+                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/villa-balik-seminyak" target="_blank">Check The Availablity</a></li>
               </ul>
             </div>
             <div>
@@ -187,30 +187,32 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Indulge in lavish serenity at <a href="https://expedia.com/affiliates/lovebalivillas/allegra-villa" target="_blank">Allegra Villa</a>, a luxurious 2-bedroom haven in Nusa Dua. Recommended by Love Bali Villas and proudly an Expedia Partner, escape to paradise and immerse yourself in unmatched opulence.
+            Nestled within the vibrant heart of Seminyak, <a href="https://expedia.com/affiliates/lovebalivillas/villa-balik-seminyak" target="_blank">Villa Balik</a>  stands as an oasis of opulence and serenity. This enchanting 1-bedroom villa, endorsed by Love Bali Villas and affiliated with Expedia, offers an intimate escape that seamlessly blends modern elegance with Balinese charm. From its meticulously designed spaces to its unparalleled amenities, Villa Balik Seminyak promises an unforgettable retreat from the ordinary.
 
           </p>
-<p>
-  Nestled in the heart of the pristine Nusa Dua region, <a href="https://expedia.com/affiliates/lovebalivillas/allegra-villa" target="_blank">Allegra Villa</a> stands as a testament to lavish living and unparalleled comfort. This exquisite 2-bedroom villa, recommended by Love Bali Villas and partnered with Expedia, offers an exclusive retreat that encapsulates the essence of tropical luxury. From its elegant design to its top-notch amenities, Allegra Villa promises an unforgettable escape from the ordinary.
+<h6> The Essence of Villa Balik: </h6>
+<p> Villa Balik Seminyak encapsulates the essence of sophisticated living in a secluded setting. With its tasteful design and thoughtful details, the villa captures the spirit of the Balinese aesthetic while providing modern comforts that cater to the discerning traveler.
 
 </p>
-<h6>Luxurious Living Spaces:</h6>
-<p> As you step into <a href="https://expedia.com/affiliates/lovebalivillas/allegra-villa" target="_blank">Allegra Villa</a>, you'll be greeted by a blend of modern aesthetics and traditional Balinese charm. The villa boasts two spacious bedrooms, each meticulously designed to provide a haven of tranquility. The opulent interiors are adorned with locally-inspired artwork and handcrafted furnishings, creating an ambiance that resonates with both elegance and comfort.
+<h6> Intimate Luxury Suite: </h6>
+<p> The villa boasts a luxurious 1-bedroom suite that invites you to unwind in an environment of refined comfort. Adorned with elegant furnishings and artistic accents, the suite offers a private sanctuary where you can relax and rejuvenate in style. The thoughtful layout ensures a seamless flow between indoor and outdoor living spaces.
+
 </p>
-<h6>Private Oasis:</h6>
-<p> The allure of Allegra Villa lies not only in its interiors but also in its outdoor spaces. A private swimming pool glistens invitingly amidst lush tropical gardens, offering the perfect spot to relax and unwind under the sun. Whether you're taking a refreshing dip or lounging by the poolside with a cocktail in hand, the villa's outdoor area sets the stage for blissful moments.
+<h6> Private Retreat of Tranquility: </h6>
+<p> Villa Balik's allure extends beyond its interiors to its serene outdoor spaces. A private garden and plunge pool create a tranquil haven where you can bask in the tropical sunshine or enjoy a leisurely swim. Whether you're sipping your morning coffee on the terrace or enjoying a sunset cocktail by the pool, the villa's outdoor area sets the stage for moments of pure relaxation.
+
 </p>
-<h6>Unrivaled Amenities:</h6>
-<p> Allegra Villa is designed to cater to your every desire. The villa features a fully equipped kitchen where you can channel your inner chef or opt for a private chef to create a personalized culinary experience. With dedicated dining and living areas, you can relish in intimate meals or gather for quality time with your loved ones. Modern amenities such as high-speed Wi-Fi, flat-screen TVs, and air conditioning ensure that you're connected and comfortable throughout your stay.
+<h6> Unparalleled Amenities: </h6>
+<p> Villa Balik Seminyak is dedicated to pampering you with the finest amenities. The villa features a fully equipped kitchenette, allowing you to prepare your meals or enjoy the services of a private chef. Modern conveniences, including high-speed Wi-Fi and entertainment systems, ensure that you're well-connected and entertained throughout your stay.
+
 </p>
-<h6>Love Bali Villas Recommends:</h6>
-<p> Renowned for curating exceptional vacation experiences, Love Bali Villas has handpicked <a href="https://expedia.com/affiliates/lovebalivillas/allegra-villa" target="_blank">Allegra Villa</a> as a top recommendation. The villa's commitment to luxury, privacy, and impeccable service aligns perfectly with Love Bali Villas' standards of excellence. Their endorsement speaks volumes about the quality of Allegra Villa as a premier accommodation choice in Nusa Dua.
-</p>
-<h6>Expedia Partner:</h6>
+
 <p>
-  Being an Expedia Partner adds an extra layer of trust and convenience to your booking experience. With the backing of a globally recognized platform, you can rest assured that your reservation process will be seamless and secure.
+  Villa Balik Seminyak's partnership with Expedia enhances your booking experience. With the support of a globally recognized platform, you can book with confidence, knowing that your reservation process will be secure and hassle-free.
+
 </p>
-<p>Allegra Villa, with its 2 bedrooms of pure luxury, is a gem nestled within the enchanting surroundings of Nusa Dua. Endorsed by Love Bali Villas and partnered with Expedia, this villa offers a haven of extravagance where every moment is designed to elevate your experience. Whether you seek relaxation, exploration, or a bit of both, <a href="https://expedia.com/affiliates/lovebalivillas/allegra-villa" target="_blank">Allegra Villa</a> invites you to unlock the door to your dream Balinese getaway.
+<p> Villa Balik Seminyak, a splendid 1-bedroom haven, offers a gateway to luxury and tranquility in the heart of Seminyak. Endorsed by Love Bali Villas and partnered with Expedia, the villa invites you to experience a world of comfort, elegance, and relaxation. Whether you seek a romantic escape or a peaceful retreat, <a href="https://expedia.com/affiliates/lovebalivillas/villa-balik-seminyak" target="_blank">Villa Balik</a> promises an intimate sanctuary where every moment is designed to elevate your experience.
+
 </p>
 
 <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
