--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Villa Balik Seminyak - Love Bali Villas Blogs</title>
-  <meta content="" name="Villa Balik 1 Bedroom Private Villa in Seminyak Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
-  <meta content="" name="Discover pure indulgence at Villa Balik Seminyak, an elegant 1-bedroom sanctuary recommended by Love Bali Villas and proudly partnered with Expedia. 
+  <title> Anoa Private Villa - Love Bali Villas Blogs</title>
+  <meta content="" name="Anoa Private Villa 4 bedrooms 14 Minutes to Canggu Beach Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Experience the epitome of luxury at Anoa Private Villa, a stunning 4-bedroom villa located just 14 minutes away from the pristine shores of Canggu Beach.  
   ">
 
   <!-- Favicons -->
@@ -85,7 +85,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/lovebalivillas/villa-balik-seminyak" target="_blank">Book Now</a></li>
+          <li><a class="getstarted scrollto" href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Book Now</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -100,11 +100,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2> Villa Balik Seminyak 1 Bedroom Private Villa in Seminyak Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
+          <h2> Anoa Private Villa 4 bedrooms 14 Minutes to Canggu Beach Recommended by Love Bali Villas @lovebalivillas Expedia Partner</h2>
           <ol>
             <li><a href="https://www.lovebalivillas.pro/">Home</a></li>
             <li><a href="http://blogs.lovebalivillas.pro/">Blogs</a></li>
-            <li> Villa Balik Seminyak </li>
+            <li> Anoa Private Villa </li>
           </ol>
         </div>
 
@@ -122,43 +122,43 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/1.jpg" alt="">
+                  <img src="assets/img/blog/anoa/1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/2.jp" alt="">
+                  <img src="assets/img/blog/anoa/2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/3.jp" alt="">
+                  <img src="assets/img/blog/anoa/3.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/4.jpg" alt="">
+                  <img src="assets/img/blog/anoa/4.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/5.jp" alt="">
+                  <img src="assets/img/blog/anoa/5.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/6.jp" alt="">
+                  <img src="assets/img/blog/anoa/6.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/7.jp" alt="">
+                  <img src="assets/img/blog/anoa/7.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/8.jpg" alt="">
+                  <img src="assets/img/blog/anoa/8.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/9.jpg" alt="">
+                  <img src="assets/img/blog/anoa/9.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/blog/balik/10.jp" alt="">
+                  <img src="assets/img/blog/anoa/10.jpg" alt="">
                 </div>
 
               </div>
@@ -168,16 +168,18 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3> Villa Balik Seminyak Information</h3>
+              <h3> Anoa Private Villa Information</h3>
               <ul>
-                <li><strong>Property Highlights:</strong> An outdoor pool, express check-out, and a garden are available at this villa. Free WiFi in public areas and free self parking are also provided. The villa boasts a private pool and offers free WiFi and a dining area. For a bit of entertainment, an LCD TV comes with cable channels, and guests can also appreciate conveniences like a sitting area and a refrigerator.  </li>
+                <li><strong>Property Highlights:</strong> This villa is located on Jl. Raya Babakan, Canggu.
+                  This villa offers wifi, kitchen, air conditioning, work desk, TV, private bathroom with towels, hairdryer, shower and toiletries.
+                  Other accommodations close to this villa are Canggu Beach 4.1 km, Batu Bolong Beach 4.1 km, Echo Beach 4.1 km, Pererenan Beach 4.1 km, Nelayan Beach 4.1 km.  </li>
                 <li><strong>Popular Amenities:</strong> Pool, Kitchen, Parking included, Free WiFi, Air conditioning. </li>
                 <li><strong>Explore Area:</strong> </li> 
-                <p> Eat Street - 6 min walk </p>
-                 <p> Seminyak Beach - 9 min walk </p>
-                 <p> Seminyak Square - 17 min walk </p>
-  <p>Denpasar (DPS-Ngurah Rai Intl.) - 32 min drive </p>
-                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/lovebalivillas/villa-balik-seminyak" target="_blank">Check The Availablity</a></li>
+                <p> Echo Beach - 13 min drive </p>
+                 <p> Canggu Beach - 13 min drive </p>
+                 <p> Seminyak Beach - 19 min drive </p>
+  <p>Denpasar (DPS-Ngurah Rai Intl.) - 47 min drive </p>
+                <li><strong>Book Now</strong>: <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Check The Availablity</a></li>
               </ul>
             </div>
             <div>
@@ -187,23 +189,27 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Nestled within the vibrant heart of Seminyak, <a href="https://expedia.com/affiliates/lovebalivillas/villa-balik-seminyak" target="_blank">Villa Balik</a>  stands as an oasis of opulence and serenity. This enchanting 1-bedroom villa, endorsed by Love Bali Villas and affiliated with Expedia, offers an intimate escape that seamlessly blends modern elegance with Balinese charm. From its meticulously designed spaces to its unparalleled amenities, Villa Balik Seminyak promises an unforgettable retreat from the ordinary.
+            Experience the epitome of luxury at <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> , a stunning 4-bedroom villa located just 14 minutes away from the pristine shores of Canggu Beach. Recommended by Love Bali Villas and proudly partnered with Expedia, this exquisite villa offers an unparalleled blend of opulence, comfort, and convenience. Explore the perfect destination for your next Bali getaway.
 
           </p>
-<h6> The Essence of Villa Balik: </h6>
-<p> Villa Balik Seminyak encapsulates the essence of sophisticated living in a secluded setting. With its tasteful design and thoughtful details, the villa captures the spirit of the Balinese aesthetic while providing modern comforts that cater to the discerning traveler.
+          <p>
+            When it comes to finding the perfect haven for your Bali escape, <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> emerges as an unparalleled choice. Nestled in the heart of paradise, this magnificent 4-bedroom villa promises an indulgent experience that combines luxury, tranquility, and proximity to the famous Canggu Beach. Endorsed by Love Bali Villas and partnered with Expedia, <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> is the epitome of opulence, making it a must-consider accommodation option for your next tropical getaway.
+
+          </p>
+<h6> Luxury Redefined: </h6>
+<p> Anoa Private Villa redefines luxury through its impeccable design and world-class amenities. Each of the four spacious bedrooms is elegantly adorned and comes complete with modern comforts, ensuring a restful night's sleep. The villa's living spaces seamlessly blend indoor and outdoor living, allowing you to fully immerse yourself in Bali's natural beauty. You'll find a fully equipped kitchen, a lavish dining area, and a cozy lounge, all designed to cater to your relaxation and entertainment needs.
 
 </p>
-<h6> Intimate Luxury Suite: </h6>
-<p> The villa boasts a luxurious 1-bedroom suite that invites you to unwind in an environment of refined comfort. Adorned with elegant furnishings and artistic accents, the suite offers a private sanctuary where you can relax and rejuvenate in style. The thoughtful layout ensures a seamless flow between indoor and outdoor living spaces.
+<h6> Tranquil Oasis: </h6>
+<p> Stepping into Anoa Private Villa is like entering a serene oasis. The lush tropical garden surrounding the villa creates a sense of peace and tranquility, providing the perfect backdrop for unwinding by the private pool or indulging in alfresco dining. The villa's architecture is a seamless blend of traditional Balinese influences and modern design, creating a harmonious ambiance that soothes the soul.
 
 </p>
-<h6> Private Retreat of Tranquility: </h6>
-<p> Villa Balik's allure extends beyond its interiors to its serene outdoor spaces. A private garden and plunge pool create a tranquil haven where you can bask in the tropical sunshine or enjoy a leisurely swim. Whether you're sipping your morning coffee on the terrace or enjoying a sunset cocktail by the pool, the villa's outdoor area sets the stage for moments of pure relaxation.
+<h6> Prime Location: </h6>
+<p> One of the highlights of Anoa Private Villa is its prime location. Situated a mere 14 minutes away from the famous Canggu Beach, guests have easy access to Bali's stunning coastline. Whether you're a surfer chasing the perfect wave or a beach lover seeking the sun's warm embrace, the proximity of the villa to the beach ensures you can make the most of your time in Bali.
 
 </p>
-<h6> Unparalleled Amenities: </h6>
-<p> Villa Balik Seminyak is dedicated to pampering you with the finest amenities. The villa features a fully equipped kitchenette, allowing you to prepare your meals or enjoy the services of a private chef. Modern conveniences, including high-speed Wi-Fi and entertainment systems, ensure that you're well-connected and entertained throughout your stay.
+<h6> Recommended by Love Bali Villas, Expedia Partner: </h6>
+<p> Anoa Private Villa comes highly recommended by Love Bali Villas, a trusted name in the luxury villa rental industry. This endorsement speaks volumes about the villa's quality and impeccable service. Additionally, <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> is a proud partner of Expedia, providing you with a hassle-free booking experience and peace of mind.
 
 </p>
 
@@ -211,8 +217,13 @@
   Villa Balik Seminyak's partnership with Expedia enhances your booking experience. With the support of a globally recognized platform, you can book with confidence, knowing that your reservation process will be secure and hassle-free.
 
 </p>
-<p> Villa Balik Seminyak, a splendid 1-bedroom haven, offers a gateway to luxury and tranquility in the heart of Seminyak. Endorsed by Love Bali Villas and partnered with Expedia, the villa invites you to experience a world of comfort, elegance, and relaxation. Whether you seek a romantic escape or a peaceful retreat, <a href="https://expedia.com/affiliates/lovebalivillas/villa-balik-seminyak" target="_blank">Villa Balik</a> promises an intimate sanctuary where every moment is designed to elevate your experience.
+<h6> Amenities and Services: </h6>
+<p> From personalized concierge services to daily housekeeping, <a href="https://expedia.com/affiliates/Canggu-Hotels-Anoa-Private-Villa-14-Minutes-To-Canggu-Beach.0gvwq7S" target="_blank">Anoa Private Villa</a> ensures that every aspect of your stay is nothing short of exceptional. The villa offers a range of amenities, including complimentary Wi-Fi, flat-screen TVs, and air conditioning. The dedicated staff is on hand to cater to your needs and make your stay truly memorable.
 
+</p>
+<h6> Your Gateway to Balinese Luxury: </h6>
+<p>
+  Anoa Private Villa encapsulates the essence of Balinese luxury. With its exquisite design, prime location, and top-notch amenities, this 4-bedroom haven offers an idyllic escape for those seeking a blend of relaxation and adventure. Whether you're traveling with family, friends, or a loved one, Anoa Private Villa guarantees an unforgettable stay that will leave you longing to return to its tranquil embrace.
 </p>
 
 <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
